--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.trino</groupId>
 		<artifactId>trino-root</artifactId>
-		<version>469</version>
+		<version>472</version>
 	</parent>
 
 	<artifactId>trino-db2</artifactId>
@@ -76,6 +76,12 @@
 			<artifactId>opentelemetry-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+            		<groupId>io.opentelemetry</groupId>
+            		<artifactId>opentelemetry-api-incubator</artifactId>
+            		<scope>provided</scope>
+    		</dependency>
 
 		<dependency>
 			<groupId>io.opentelemetry</groupId>
